# primer

./: .gitignore  README.md  _config.yml  install.ps1  install.sh  landing.html  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: publish.yml
api/: index.py  requirements.txt
primer_game/: main.py
primer_game/campaigns/young_ladys_primer/: __init__.py  story.py
primer_game/skill-packs/art/: __init__.py  story.py  zones.py
primer_game/skill-packs/coding_basics/: __init__.py  story.py  zones.py
primer_game/skill-packs/geography/: __init__.py  story.py  zones.py
primer_game/skill-packs/history/: __init__.py  story.py  zones.py
primer_game/skill-packs/kindness/: __init__.py  story.py  zones.py
primer_game/skill-packs/letters/: __init__.py  story.py  zones.py
primer_game/skill-packs/logic/: zones.py
primer_game/skill-packs/math_advanced/: __init__.py  story.py  zones.py
primer_game/skill-packs/numbers/: __init__.py  story.py  zones.py
primer_game/skill-packs/science/: __init__.py  story.py  zones.py
primer_game/skill-packs/shapes/: zones.py
primer_game/skill-packs/simple_machines/: __init__.py  story.py
primer_game/skill-packs/sports/: zones.py
primer_game/skill-packs/time/: __init__.py
