[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "primer-quest"
version = "1.12.0"
description = "A terminal adventure for young learners — phonics, math, science, kindness, geography, history, art, coding, and space."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "thorski1" }]
keywords = [
    "terminal", "game", "children", "kids", "education", "learning",
    "phonics", "math", "science", "coding", "kindness", "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Education",
    "Topic :: Terminals",
]
dependencies = [
    "rich>=13.0.0",
    "quest-engine>=1.5.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage      = "https://github.com/thorski1/primer"
Repository    = "https://github.com/thorski1/primer"
"Bug Tracker" = "https://github.com/thorski1/primer/issues"

[project.scripts]
primer               = "primer_game.main:main_primer"
letters-quest        = "primer_game.main:main_letters"
numbers-quest        = "primer_game.main:main_numbers"
science-quest        = "primer_game.main:main_science"
kindness-quest       = "primer_game.main:main_kindness"
geography-quest      = "primer_game.main:main_geography"
math-advanced-quest  = "primer_game.main:main_math_advanced"
history-quest        = "primer_game.main:main_history"
art-quest            = "primer_game.main:main_art"
coding-basics-quest  = "primer_game.main:main_coding_basics"
space-quest          = "primer_game.main:main_space"
music-quest          = "primer_game.main:main_music"
animals-quest        = "primer_game.main:main_animals"

[tool.setuptools.packages.find]
where   = ["."]
include = ["primer_game*"]

[tool.setuptools.package-data]
primer_game = ["skill-packs/**/*.py", "campaigns/**/*.py", "campaigns/**/*.json"]
