[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "primer-quest"
version = "1.30.0"
description = "A terminal adventure for young learners — phonics, math, science, kindness, geography, history, art, coding, and space."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "thorski1" }]
keywords = [
    "terminal", "game", "children", "kids", "education", "learning",
    "phonics", "math", "science", "coding", "kindness", "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Education",
    "Topic :: Terminals",
]
dependencies = [
    "rich>=13.0.0",
    "quest-engine>=1.5.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage      = "https://github.com/thorski1/primer"
Repository    = "https://github.com/thorski1/primer"
"Bug Tracker" = "https://github.com/thorski1/primer/issues"

[project.scripts]
primer               = "primer_game.main:main_primer"
letters-quest        = "primer_game.main:main_letters"
numbers-quest        = "primer_game.main:main_numbers"
science-quest        = "primer_game.main:main_science"
kindness-quest       = "primer_game.main:main_kindness"
geography-quest      = "primer_game.main:main_geography"
math-advanced-quest  = "primer_game.main:main_math_advanced"
history-quest        = "primer_game.main:main_history"
art-quest            = "primer_game.main:main_art"
coding-basics-quest  = "primer_game.main:main_coding_basics"
space-quest          = "primer_game.main:main_space"
music-quest          = "primer_game.main:main_music"
animals-quest        = "primer_game.main:main_animals"
words-quest          = "primer_game.main:main_words"
cooking-quest        = "primer_game.main:main_cooking"
body-quest           = "primer_game.main:main_body"
money-quest          = "primer_game.main:main_money"
environment-quest    = "primer_game.main:main_environment"
thinking-quest       = "primer_game.main:main_thinking"
telling-time-quest   = "primer_game.main:main_telling_time"
inventions-quest     = "primer_game.main:main_inventions"
oceans-quest          = "primer_game.main:main_oceans"
civics-quest          = "primer_game.main:main_civics"
emotions-quest        = "primer_game.main:main_emotions"
measurement-quest     = "primer_game.main:main_measurement"
safety-quest          = "primer_game.main:main_safety"
dinosaurs-quest       = "primer_game.main:main_dinosaurs"
weather-quest         = "primer_game.main:main_weather"
maps-quest            = "primer_game.main:main_maps"
famous-people-quest   = "primer_game.main:main_famous_people"
religions-quest       = "primer_game.main:main_religions"

[tool.setuptools.packages.find]
where   = ["."]
include = ["primer_game*"]

[tool.setuptools.package-data]
primer_game = ["skill-packs/**/*.py", "campaigns/**/*.py", "campaigns/**/*.json"]
